kubernetes/core-components/authelia/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth
  labels:
    app.kubernetes.io/instance: "authelia"
    app.kubernetes.io/name: "authelia"
spec:
  forwardAuth:
    address: "http://authelia.authelia/api/authz/forward-auth"
    trustForwardHeader: true
    maxResponseBodySize: 8192
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
      - "Remote-Email"
      - "Remote-Name"
