kubernetes/core-components/authelia/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-valkey
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: authelia-valkey
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: valkey
